deleted raw tags for button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {%- include head.html -%}
   <body>
     {%- include header.html -%}
-    {% raw %}{% include reciteme-button.html %}{% endraw %}
+    {% include reciteme-button.html %}
     <main class="page-content" aria-label="Content">
       <div class="wrapper">{{ content }}</div>
     </main>
