changed text for accessibility aid button

--- a/_includes/reciteme-button.html
+++ b/_includes/reciteme-button.html
@@ -1,6 +1,6 @@
 
 <button id="enableRecite" class="reciteme-button" aria-label="Accessibility Tools">
-  Accessibility
+  Accessibility Aid
 </button>
 
 <script>
